# pulsar-rs-perf

./: Cargo.toml  README.md  docker-build.sh
.github/workflows/: release-linux.yaml
src/: main.rs  produce.rs
