# Copyright 2025 Yunze Xu
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "pulsar-rs-perf"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
logforth = "0.27.0"
pulsar = "6.3.1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = { version = "1.0" }
chrono = "0.4.41"
stats-cli = "3.0.1"
async-rate-limiter = { version = "1.1.0", features = ["rt-tokio"] }
